--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Explainimal</string>
+    <string name="game_name">Explainimal</string>
+    <string name="game_desc">Say the animal name described by your friend!</string>
+    <string name="title_play">Play</string>
 </resources>
