[Fragment Game] Modify items in layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="btn_game_skip_text">Skip</string>
     <string name="btn_game_correct_text">Correct</string>
     <string name="btn_score_play_again">Play Again</string>
-    <string name="tv_score_you_answered_text">You Answered</string>
+    <string name="tv_score_you_answered_text">Your Score:</string>
     <string name="game_score_text">Score: %1$d</string>
 </resources>
